Piere will never notice this.

--- a/ui/sections/containers/controls/table-environment.reel/table-environment.html
+++ b/ui/sections/containers/controls/table-environment.reel/table-environment.html
@@ -18,7 +18,7 @@
             "properties": {
                 "element": {"#": "table"},
                 "delegate": {"@": "owner"},
-                "label": "Environments",
+                "label": "Environment Variables",
                 "columns":  [
                     {
                         "value": "Variable",
