adds empty add button functionality to network settings tables

--- a/ui/sections/network/controls/table-hosts.reel/table-hosts.html
+++ b/ui/sections/network/controls/table-hosts.reel/table-hosts.html
@@ -6,7 +6,8 @@
     {
         "owner": {
             "properties": {
-                "element": {"#": "owner"}
+                "element": {"#": "owner"},
+                "table": {"@": "table"}
             }
         },
 
