--- a/ui/sections/network/controls/table-routes.reel/table-routes.html
+++ b/ui/sections/network/controls/table-routes.reel/table-routes.html
@@ -7,7 +7,8 @@
     {
         "owner": {
             "properties": {
-                "element": {"#": "owner"}
+                "element": {"#": "owner"},
+                "table": {"@": "table"}
             }
         },
 
