the alert filter layout should look usuable

--- a/ui/sections/system/inspectors/alert.reel/alert-filter.reel/alert-filter.html
+++ b/ui/sections/system/inspectors/alert.reel/alert-filter.reel/alert-filter.html
@@ -38,7 +38,7 @@
                 "element": {"#": "table"},
                 "delegate": {"@": "owner"},
                 "label": "Alert Notifications",
-                "contentMaxHeight": 25,
+                "showRowActions": false,
                 "columns":  [
                     {
                         "value": "Event"
@@ -98,7 +98,7 @@
 <body>
     <div data-montage-id="owner" class="AlertFilter">
         <div data-montage-id="inspector">
-            <div data-montage-id="table" class="AlertFilter-table">
+            <div data-montage-id="table" class="AlertFilter-table g-margin-bottom">
                 <div data-arg="table-editable-header-toolbar" data-montage-id="tableHeader"></div>
                 <div data-arg="row-new" data-montage-id="newEntry" class="Table-row"></div>
                 <div data-arg="row-entry" data-montage-id="entry" class="Table-row"></div>
