--- a/ui/sections/system/inspectors/alert.reel/alert.html
+++ b/ui/sections/system/inspectors/alert.reel/alert.html
@@ -34,7 +34,7 @@
 <body>
     <div data-montage-id="owner" class="Alert">
         <div data-montage-id="entries"></div>
-        <div data-montage-id="settings"></div>
+        <div data-montage-id="settings></div>
     </div>
 </body>
 </html>
