--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     <script src="node_modules/maphilight/jquery.maphilight.js" charset="utf-8" ></script>
     <script src="node_modules/smoothscroll-polyfill/src/smoothscroll.js"></script>
     <script src="vendors/timezone-picker.js" charset="utf-8" defer></script>
+    <script src="vendors/konami.js"></script>
     <style>
         .loading {height: 100vh;}
         .loading:after {
@@ -79,5 +80,10 @@
     <div data-montage-id="application-modal" class="ApplicationModal"></div>
     <span class="loading has-loading-spinner">
     </span>
+    <script>
+        new Konami(function() {
+            document.querySelector('.SignIn-logo').src = '/assets/images/alt_logo.gif';
+        });
+    </script>
 </body>
 </html>
