Also update the empty "environments" string to match label.

--- a/ui/sections/containers/controls/table-environment.reel/table-environment.html
+++ b/ui/sections/containers/controls/table-environment.reel/table-environment.html
@@ -20,7 +20,7 @@
                 "element": {"#": "table"},
                 "delegate": {"@": "owner"},
                 "label": "Environment variables",
-                "emptyMessage": "No environments added",
+                "emptyMessage": "No environment variables added",
                 "emptyActionLabel": "Add environment",
                 "columns":  [
                     {
