Hide disks until fully ready in volume-creator

--- a/ui/sections/storage/inspectors/volume-creator.reel/volume-creator.html
+++ b/ui/sections/storage/inspectors/volume-creator.reel/volume-creator.html
@@ -32,6 +32,7 @@
                 "canSave": true
             },
             "bindings": {
+                "isLoading": {"<-": "@owner.isLoading"},
                 "context": {"<-": "@owner.context"},
                 "isSaveDisabled": {"<-": "@owner.object.topology.data.length == 0"}
             }
