--- a/ui/sections/storage/inspectors/replication.reel/replication.html
+++ b/ui/sections/storage/inspectors/replication.reel/replication.html
@@ -25,11 +25,7 @@
             ]
         },
         "validationController": {
-            "prototype": "core/controller/validation-controller",
-            "properties": {
-                "fields": {
-                }
-            }
+            "prototype": "core/controller/validation-controller"
         },
         "inspector": {
             "prototype": "ui/inspectors/inspector.reel",
@@ -47,7 +43,8 @@
             },
             "bindings": {
                 "context": {"<-": "@owner.context"},
-                "extraDeleteFlags": {"<-": "@owner.extraDeleteFlags"}
+                "extraDeleteFlags": {"<-": "@owner.extraDeleteFlags"},
+                "isSaveDisabled": {"<-": "!@owner.object.datasets.0.slave || !@owner.object.datasets.0.master"}
             }
         },
         "datasetTreeController": {
@@ -108,10 +105,10 @@
                 "labelPropertyName": "name"
             }
         },
-        "peer": {
+        "slave": {
             "prototype": "blue-shark/ui/field-select.reel",
             "properties": {
-                "element": {"#": "peer"},
+                "element": {"#": "slave"},
                 "isMandatory": true,
                 "label": "Peer",
                 "converter": {"@": "peerOptionsConverter"}
@@ -287,7 +284,7 @@
                     <div data-montage-id="nameDisplay"></div>
                 </div>
             </div>
-            <div data-montage-id="peer"></div>
+            <div data-montage-id="slave"></div>
             <div data-montage-id="source_dataset"></div>
             <div data-montage-id="target_dataset"></div>
             <div data-montage-id="compress"></div>
