--- a/ui/sections/wizard/inspectors/share.reel/table-iscsi.reel/table-iscsi.html
+++ b/ui/sections/wizard/inspectors/share.reel/table-iscsi.reel/table-iscsi.html
@@ -7,7 +7,8 @@
     {
         "owner": {
             "properties": {
-                "element": {"#": "owner"}
+                "element": {"#": "owner"},
+                "table": {"@": "table"}
             }
         },
 
