--- a/ui/sections/wizard/inspectors/share.reel/table-nfs.reel/table-nfs.html
+++ b/ui/sections/wizard/inspectors/share.reel/table-nfs.reel/table-nfs.html
@@ -6,7 +6,8 @@
     {
         "owner": {
             "properties": {
-                "element": {"#": "owner"}
+                "element": {"#": "owner"},
+                "table": {"@": "table"}
             }
         },
 
