--- a/ui/sections/wizard/inspectors/user.reel/table-users.reel/table-users.html
+++ b/ui/sections/wizard/inspectors/user.reel/table-users.reel/table-users.html
@@ -7,7 +7,8 @@
     {
         "owner": {
             "properties": {
-                "element": {"#": "owner"}
+                "element": {"#": "owner"},
+                "table": {"@": "table"}
             }
         },
 
