Avoid overriding existing permissions type
Ticket: #22040

--- a/ui/sections/storage/inspectors/volume-dataset.reel/volume-dataset-permissions.reel/volume-dataset-permissions.html
+++ b/ui/sections/storage/inspectors/volume-dataset.reel/volume-dataset-permissions.reel/volume-dataset-permissions.html
@@ -16,15 +16,11 @@
                 "title": "Permissions"
             }
         },
-        "permissionsTypeConverter": {
-            "prototype": "core/converter/select-option-converter"
-        },
         "permissionsType": {
             "prototype": "blue-shark/ui/field-select.reel",
             "properties": {
                 "element": {"#": "permissionsType"},
-                "label": "Permissions Type",
-                "converter": {"@": "permissionsTypeConverter"}
+                "label": "Permissions Type"
             },
             "bindings": {
                 "options": {"<-": "@owner._permissionsTypeOptions"},
