We will have the best updater, it will be yuuuuggeee
Ticket: #22086

--- a/ui/sections/system/inspectors/updates.reel/updates.html
+++ b/ui/sections/system/inspectors/updates.reel/updates.html
@@ -165,8 +165,10 @@
         "noOperation": {
             "prototype": "ui/controls/inspector-section-title.reel",
             "properties": {
-                "element": {"#": "noOperation"},
-                "value": "No update available"
+                "element": {"#": "noOperation"}
+            },
+            "bindings": {
+                "value": {"<-": "@owner.noServer ? 'Error connecting to update server' : 'No update available'"}
             }
         },
         "updateAvailable": {
