--- a/ui/sections/vms/inspectors/virtual-machine.reel/virtual-machine-readme.reel/virtual-machine-readme.html
+++ b/ui/sections/vms/inspectors/virtual-machine.reel/virtual-machine-readme.reel/virtual-machine-readme.html
@@ -10,6 +10,16 @@
                 "element": {"#": "owner"}
             }
         },
+        "inspector": {
+            "prototype": "ui/inspectors/inspector.reel",
+            "properties": {
+                "element": {"#": "inspector"},
+                "isFooterHidden": true
+            },
+            "bindings": {
+                "context": {"<-": "@owner.context"}
+            }
+        },
         "readmeHtml": {
             "prototype": "blue-shark/ui/text.reel",
             "properties": {
@@ -18,21 +28,15 @@
             "bindings": {
                 "value": {"<-": "@owner.parsedHtml"}
             }
-        },
-        "scrollView": {
-            "prototype": "blue-shark/ui/scroller.reel",
-            "properties": {
-                "element": {"#": "scrollView"},
-                "overflow": "scrollY"
-            }
         }
     }
     </script>
 </head>
 <body>
     <div data-montage-id="owner" class="VirtualMachineReadme">
-        <div data-montage-id="scrollView" class="VirtualMachineReadme-ScrollView">
+        <div data-montage-id="inspector">
             <div data-montage-id="readmeHtml"></div>
         </div>
+    </div>
 </body>
 </html>
