Filter docker network per host
Ticket: #22155

--- a/ui/sections/containers/inspectors/container.reel/container.html
+++ b/ui/sections/containers/inspectors/container.reel/container.html
@@ -332,7 +332,7 @@
                 "label": "Networks"
             },
             "bindings": {
-                "options": {"<-": "@owner.object._networks.map{{ label: name, value: id }}"},
+                "options": {"<-": "@owner.object._networks.filter{host == @owner.object.host}.map{{ label: name, value: id }}"},
                 "selectedValues": {"<->": "@owner.object.networks"}
             }
         },
