Avoid activating debug UI link when checking option

--- a/ui/sections/system/inspectors/debug.reel/debug.html
+++ b/ui/sections/system/inspectors/debug.reel/debug.html
@@ -80,7 +80,7 @@
                 "value": "Open Debugger UI"
             },
             "bindings": {
-                "disabled": {"<-": "!@owner.object.debugui"}
+                "disabled": {"<-": "!@owner.object._isDebugUiEnabled"}
             }
         },
         "noOperation": {
