Fix FreeIPA encryption binding
Ticket: #22172

--- a/ui/sections/accounts/inspectors/directory-services.reel/freeipa-service.reel/freeipa-service.html
+++ b/ui/sections/accounts/inspectors/directory-services.reel/freeipa-service.reel/freeipa-service.html
@@ -77,7 +77,7 @@
                 ]
             },
             "bindings": {
-                "selectedValue": {"<->": "@owner.object.properties.encryption"}
+                "selectedValue": {"<->": "@owner.object.parameters.encryption"}
             }
         },
 
