--- a/ui/sections/accounts/inspectors/directory-services.reel/freeipa-service.reel/freeipa-service.html
+++ b/ui/sections/accounts/inspectors/directory-services.reel/freeipa-service.reel/freeipa-service.html
@@ -99,7 +99,7 @@
                 "label": "Group Suffix"
             },
             "bindings": {
-                "value": {"<->": "@owner.object.parameters.user_suffix"}
+                "value": {"<->": "@owner.object.parameters.group_suffix"}
             }
         },
 
