--- a/ui/sections/containers/inspectors/docker-host.reel/docker-host.html
+++ b/ui/sections/containers/inspectors/docker-host.reel/docker-host.html
@@ -51,7 +51,8 @@
             "prototype": "blue-shark/ui/field-text-input.reel",
             "properties": {
                 "element": {"#": "name"},
-                "label": "Name"
+                "label": "Name",
+                "isMandatory": true
             },
             "bindings": {
                 "value": {"<->": "@owner.object.name"}
@@ -123,7 +124,8 @@
             "prototype": "blue-shark/ui/field-select.reel",
             "properties": {
                 "element": {"#": "target"},
-                "label": "Datastore"
+                "label": "Datastore",
+                "isMandatory": true
             },
             "bindings": {
                 "selectedValue": {"<->": "@owner.object.target"},
