Fix accessing datasets that are named "share"
Ticket: #22165

--- a/ui/sections/storage/inspectors/volume-dataset.reel/volume-dataset.html
+++ b/ui/sections/storage/inspectors/volume-dataset.reel/volume-dataset.html
@@ -162,7 +162,7 @@
             "properties": {
                 "element": {"#": "share"},
                 "name": "Share",
-                "path": "share"
+                "path": "_/share"
             },
             "bindings": {
                 "classList.has('hide')": {"<-": "!@owner.object._share"}
