Change FreeIPA encryption NONE to OFF

--- a/ui/sections/accounts/inspectors/directory-services.reel/freeipa-service.reel/freeipa-service.html
+++ b/ui/sections/accounts/inspectors/directory-services.reel/freeipa-service.reel/freeipa-service.html
@@ -71,7 +71,7 @@
                 "element": {"#": "encryption"},
                 "label": "Encryption",
                 "options": [
-                    "NONE",
+                    "OFF",
                     "SSL",
                     "TLS"
                 ]
