Send correct container name when creating a container. Ticket: #22225

--- a/ui/sections/containers/controls/docker-image-search.reel/table-row-image.reel/table-row-image.html
+++ b/ui/sections/containers/controls/docker-image-search.reel/table-row-image.reel/table-row-image.html
@@ -22,7 +22,7 @@
                 "element": {"#": "name"}
             },
             "bindings": {
-                "value": {"<->": "@owner.object.name"}
+                "value": {"<-": "@owner.object.label"}
             }
         },
 
@@ -32,7 +32,7 @@
                 "element": {"#": "description"}
             },
             "bindings": {
-                "value": {"<->": "@owner.object.description"}
+                "value": {"<-": "@owner.object.description"}
             }
         },
 
@@ -42,7 +42,7 @@
                 "element": {"#": "version"}
             },
             "bindings": {
-                "value": {"<->": "@owner.object.version"}
+                "value": {"<-": "@owner.object.version"}
             }
         },
 
@@ -52,7 +52,7 @@
                 "element": {"#": "star_count"}
             },
             "bindings": {
-                "value": {"<->": "@owner.object.star_count"}
+                "value": {"<-": "@owner.object.star_count"}
             }
         },
 
