changes name of newRow regression on boot volume Ticket: #22205

--- a/ui/sections/system/inspectors/boot-pool.reel/boot-pool-topology-table.reel/boot-pool-topology-table.html
+++ b/ui/sections/system/inspectors/boot-pool.reel/boot-pool-topology-table.reel/boot-pool-topology-table.html
@@ -48,10 +48,10 @@
             }
         },
 
-        "editEntry": {
+        "newEntry": {
             "prototype": "../boot-pool-topology-edit-row.reel",
             "properties": {
-                "element": {"#": "editEntry"}
+                "element": {"#": "newEntry"}
             },
             "bindings": {
                 "object": {"<->": "@table.currentNewEntry.object"},
@@ -88,7 +88,7 @@
                 <div data-montage-id="replace"></div>
             </div>
             <div data-arg="row-entry" data-montage-id="rowEntry"></div>
-            <div data-arg="row-new" data-montage-id="editEntry"></div>
+            <div data-arg="row-new" data-montage-id="newEntry"></div>
         </div>
     </div>
 </body>
