updates favicon and changes index title Ticket: #22226

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
 
-    <title>FreeNAS 10</title>
+    <title>FreeNAS Corral</title>
 
     <link rel="stylesheet" href="node_modules/blue-shark/ui/global.css" />
     <link rel="stylesheet" href="assets/style/style.css" />
