minor text change

--- a/ui/sections/containers/inspectors/settings.reel/settings.html
+++ b/ui/sections/containers/inspectors/settings.reel/settings.html
@@ -58,7 +58,7 @@
             "prototype": "blue-shark/ui/field-select.reel",
             "properties": {
                 "element": {"#": "apiForwarding"},
-                "label": "API forwarding"
+                "label": "Forward API to"
             },
             "bindings": {
                 "disabled": {"<-": "!@apiForwardingEnable.checked"},
