Fix calendar tasks arguments
Ticket: #22217

--- a/ui/inspectors/calendar-task.reel/calendar-task.html
+++ b/ui/inspectors/calendar-task.reel/calendar-task.html
@@ -73,7 +73,8 @@
             },
             "bindings": {
                 "moduleId": {"<-": "'ui/inspectors/calendar-task.reel/' + @owner.taskToInspector[@owner.object.task] + '-args.reel'"},
-                "object": {"<-": "@owner.object.args"}
+                "object": {"<->": "@owner.object.args"},
+                "component.isNew": {"<-": "@owner.object._isNew"}
             }
         },
         "enabled": {
