--- a/ui/inspectors/calendar-task.reel/snapshot-args.reel/snapshot-args.html
+++ b/ui/inspectors/calendar-task.reel/snapshot-args.reel/snapshot-args.html
@@ -12,10 +12,7 @@
             }
         },
         "datasetTreeController": {
-            "prototype": "core/controller/tree/dataset-tree-controller",
-            "bindings": {
-                "service": {"<-": "@owner.application.dataService"}
-            }
+            "prototype": "core/controller/tree/dataset-tree-controller"
         },
         "datasetSelector": {
             "prototype": "ui/controls/field-treeview.reel",
