--- a/ui/sections/wizard/inspectors/mail.reel/mail.html
+++ b/ui/sections/wizard/inspectors/mail.reel/mail.html
@@ -16,7 +16,7 @@
                 "element": {"#": "mail"}
             },
             "bindings": {
-                "object": {"<->": "@owner.object"}
+                "object": {"<-": "@owner.object"}
             }
         }
 
