--- a/ui/controls/foldable-section.reel/foldable-section.html
+++ b/ui/controls/foldable-section.reel/foldable-section.html
@@ -43,14 +43,16 @@
 </head>
 <body>
     <div data-montage-id="owner" class="FoldableSection">
-        <button data-montage-id="expandButton" class="FoldableSection-expand">
-            <svg>
-                <use xlink:href="#i-triangle-down"/>
-            </svg>
+        <div data-montage-id="expandButton" class="FoldableSection-expand">
+            <div class="FoldableSection-expand-icon">
+                <svg>
+                    <use xlink:href="#i-triangle-down"/>
+                </svg>
+            </div>
             <div class="FoldableSection-expand-titles">
                 <div data-montage-id="sectionTitle"></div>
             </div>
-        </button>
+        </div>
         <div data-montage-id="sectionContent" class="FoldableSection-content">
             <div data-montage-id="contentContainer" class="FoldableSection-contentContainer">
                 <div data-param="*"></div>
