--- a/ui/sections/system/inspectors/support.reel/support.html
+++ b/ui/sections/system/inspectors/support.reel/support.html
@@ -126,7 +126,7 @@
     <div data-montage-id="owner" class="Support">
         <div data-montage-id="inspector">
             <div data-montage-id="supportHeader" class="Support-header">
-                <p>Before filing a bug report or feature request, search <a href=\"http://bugs.freenas.org\" target=\"_blank\">http://bugs.freenas.org</a> to ensure the issue has not already been reported. If it has, add a comment to the existing issue instead of creating a new one. For enterprise-grade storage solutions and support, please visit <a href=\"http://www.ixsystems.com/storage/\" target=\"_blank\">http://www.ixsystems.com/storage/</a>.</p><p>If you do not have an account, please <a href=\"https://bugs.freenas.org/account/register\" target=\"_blank\">register</a>.</p>
+                <p>Before filing a bug report or feature request, search <a href="http://bugs.freenas.org" target="_blank">http://bugs.freenas.org</a> to ensure the issue has not already been reported. If it has, add a comment to the existing issue instead of creating a new one. For enterprise-grade storage solutions and support, please visit <a href="http://www.ixsystems.com/storage/" target="_blank">http://www.ixsystems.com/storage/</a>.</p><p>If you do not have an account, please <a href="https://bugs.freenas.org/account/register" target="_blank">register</a>.</p>
             </div>
             <div data-montage-id="title"></div>
             <div data-montage-id="username"></div>
