Add VLANs to the bridge member options
Ticket: #22150

--- a/ui/sections/network/inspectors/network-interface.reel/network-interface.html
+++ b/ui/sections/network/inspectors/network-interface.reel/network-interface.html
@@ -171,7 +171,7 @@
             },
             "bindings": {
                 "object": {"<-": "@owner.object.bridge"},
-                "memberOptions": {"<-": "@owner.interfaces.filter{type == 'ETHER'}"}
+                "memberOptions": {"<-": "@owner.interfaces.filter{type == 'ETHER' || type == 'VLAN'}"}
             }
         },
         "lagg": {
