Fix network interface edition right after creation
Ticket: #22341

--- a/ui/sections/network/inspectors/network-interface.reel/network-interface.html
+++ b/ui/sections/network/inspectors/network-interface.reel/network-interface.html
@@ -31,7 +31,8 @@
             "bindings": {
                 "context": {"<-": "@owner.context"},
                 "canDelete": {"<-": "@owner.object.type != 'ETHER'"},
-                "needSaveConfirmation": {"<-": "@owner.object._isClient"}
+                "needSaveConfirmation": {"<-": "@owner.object._isClient"},
+                "isLoading": {"<-": "@owner.isLoading"}
             }
         },
         "overview": {
