Fix lagg creation and add default values
Ticket: #22341

--- a/ui/sections/network/inspectors/network-interface.reel/lagg.reel/lagg.html
+++ b/ui/sections/network/inspectors/network-interface.reel/lagg.reel/lagg.html
@@ -22,8 +22,8 @@
                 "labelPropertyName": "id"
             },
             "bindings": {
-                "options": {"<-": "@owner.portOptions"},
-                "selectedValues": {"<->": "@owner.object.lagg.ports"}
+                "selectedValues": {"<->": "@owner.object.lagg.ports"},
+                "options": {"<-": "@owner.portOptions"}
             }
         },
         "protocol": {
