Display correctly User home directory when saving. Ticket: #22176

--- a/ui/sections/accounts/inspectors/user.reel/user.html
+++ b/ui/sections/accounts/inspectors/user.reel/user.html
@@ -280,7 +280,7 @@
             },
             "bindings": {
                 "selectedPath": {"<->": "@owner.object.home"},
-                "suffix": {"<-": "@owner.object._isNew ? @owner.object.username : ''"},
+                "suffix": {"<-": "@owner.object._isNew && !@owner.object.home.endsWith('/' + @owner.object.username) ? @owner.object.username : ''"},
                 "classList.has('hide')": {"<-": "@owner.useEmptyHomedir"}
             }
         },
