--- a/ui/sections/accounts/inspectors/group.reel/group.html
+++ b/ui/sections/accounts/inspectors/group.reel/group.html
@@ -10,9 +10,6 @@
                 "element": {"#": "owner"},
                 "validationController": {"@": "validationController"},
                 "inspector": {"@": "inspector"}
-            },
-            "bindings": {
-                "readOnly": {"<-": "@owner.object.builtin || @owner.object.origin.read_only"}
             }
         },
         "validationController": {
@@ -31,10 +28,9 @@
             },
             "bindings": {
                 "context": {"<-": "@owner.context"},
-                "canDelete": {"<-": "!@owner.readOnly"},
-                "canRevert": {"<-": "!@owner.readOnly"},
-                "canSave": {"<-": "!@owner.readOnly"},
-                "isFooterHidden": {"<-": "@owner.readOnly"}
+                "canDelete": {"<-": "!@owner.object.builtin"},
+                "canRevert": {"<-": "(@owner.object.gid == 0) || !@owner.object.builtin"},
+                "canSave": {"<-": "(@owner.object.gid == 0) || !@owner.object.builtin"}
             }
         },
         "gidValidator": {
@@ -80,7 +76,7 @@
                 "element": {"#": "systemGroupSubstitution"}
             },
             "bindings": {
-                "switchValue": {"<-": "@owner.readOnly ? 'system' : @owner.groupType"}
+                "switchValue": {"<-": "@owner.groupType"}
             }
         },
         "nameEdit": {
