Refix logic to prevent editing users and groups that should be read only
Ticket: #22649
Ticket: #22284

--- a/ui/sections/accounts/inspectors/user.reel/user.html
+++ b/ui/sections/accounts/inspectors/user.reel/user.html
@@ -19,6 +19,9 @@
                      "value": "delete_own_group",
                      "checked": false}
                 ]
+            },
+            "bindings": {
+                "readOnly": {"<-": "!@owner.object._isNew && (@owner.object.builtin || @owner.object.origin.read_only)"}
             }
         },
         "validationController": {
@@ -38,11 +41,11 @@
             },
             "bindings": {
                 "context": {"<-": "@owner.context"},
-                "canDelete": {"<-": "!@owner.object.builtin || !@owner.object.origin.read_only"},
-                "canRevert": {"<-": "(@owner.object.uid == 0) || !@owner.object.builtin || !@owner.object.origin.read_only"},
-                "canSave": {"<-": "(@owner.object.uid == 0) || !@owner.object.builtin || !@owner.object.origin.read_only"},
+                "canDelete": {"<-": "!@owner.readOnly"},
+                "canRevert": {"<-": "(@owner.object.uid == 0) || !@owner.readOnly"},
+                "canSave": {"<-": "(@owner.object.uid == 0) || !@owner.readOnly"},
                 "extraDeleteFlags": {"<-": "@owner.extraDeleteFlags"},
-                "isFooterHidden": {"<-": "@owner.object.builtin || @owner.object.origin.read_only"}
+                "isFooterHidden": {"<-": "@owner.readOnly"}
             }
         },
         "filesystemTreeController": {
@@ -64,7 +67,7 @@
                 "element": {"#": "uidNameSubstitution"}
             },
             "bindings": {
-                "switchValue": {"<-": "!!@owner.object.builtin || !!@owner.object.origin.read_only ? 'system' : 'luser'"}
+                "switchValue": {"<-": "!!@owner.readOnly ? 'system' : 'luser'"}
             }
         },
         "systemUserSubstitution": {
