Fix LDAP directory service encryption binding
Ticket: #22618

--- a/ui/sections/accounts/inspectors/directory-services.reel/ldap-service.reel/ldap-service.html
+++ b/ui/sections/accounts/inspectors/directory-services.reel/ldap-service.reel/ldap-service.html
@@ -78,7 +78,7 @@
                 ]
             },
             "bindings": {
-                "selectedValue": {"<->": "@owner.object.properties.encryption"}
+                "selectedValue": {"<->": "@owner.object.parameters.encryption"}
             }
         },
 
