Replace NONE with OFF in LDAP encryption values
Ticket: #22618

--- a/ui/sections/accounts/inspectors/directory-services.reel/ldap-service.reel/ldap-service.html
+++ b/ui/sections/accounts/inspectors/directory-services.reel/ldap-service.reel/ldap-service.html
@@ -72,7 +72,7 @@
                 "element": {"#": "encryption"},
                 "label": "Encryption",
                 "options": [
-                    "NONE",
+                    "OFF",
                     "SSL",
                     "TLS"
                 ]
