Refactor search groups/users components Ticket: 22860

--- a/ui/controls/search-groups.reel/search-groups.html
+++ b/ui/controls/search-groups.reel/search-groups.html
@@ -16,8 +16,7 @@
                 "controller": {"@": "owner"}
             },
             "bindings": {
-                "value": {"<->": "@owner.entry"},
-                "labelExpression": {"<-": "@owner.labelExpression"},
+                "value": {"<->": "@owner.value"},
                 "labelPath": {"<-": "@owner.labelPath"},
                 "valuePath": {"<-": "@owner.valuePath"},
                 "label": {"<-": "@owner.label"},
