--- a/ui/controls/search-users.reel/search-users.html
+++ b/ui/controls/search-users.reel/search-users.html
@@ -16,9 +16,8 @@
                 "controller": {"@": "owner"}
             },
             "bindings": {
-                "value": {"<->": "@owner.entry"},
+                "value": {"<->": "@owner.value"},
                 "label": {"<-": "@owner.label"},
-                "labelExpression": {"<-": "@owner.labelExpression"},
                 "disabled": {"<-": "@owner.disabled"},
                 "isLoading": {"<-": "@owner.isLoading"},
                 "labelPath": {"<-": "@owner.labelPath"},
