--- a/ui/sections/accounts/inspectors/user.reel/user.html
+++ b/ui/sections/accounts/inspectors/user.reel/user.html
@@ -213,7 +213,7 @@
                 "label": "Primary Group"
             },
             "bindings": {
-                "value": {"<->": "@owner.object.group"}
+                "value": {"<->": "@owner.context.primaryGroup"}
             }
         },
         "groupDisplay": {
