--- a/ui/sections/accounts/inspectors/user.reel/user.html
+++ b/ui/sections/accounts/inspectors/user.reel/user.html
@@ -260,7 +260,7 @@
                 "validationPath": "groups"
             },
             "bindings": {
-                "values": {"<->": "@owner.object.groups"},
+                "values": {"<->": "@owner.context.secondaryGroups"},
                 "enabled": {"<-": "@groupsSection.isExpanded"}
             }
         },
