--- a/ui/sections/storage/inspectors/share.reel/share.html
+++ b/ui/sections/storage/inspectors/share.reel/share.html
@@ -143,7 +143,8 @@
             },
             "bindings": {
                 "moduleId": {"<-": "@owner._montage_metadata.moduleId + '/' + @owner.object.type + '-share.reel'"},
-                "object": {"<-": "@owner.object"}
+                "object": {"<-": "@owner.object"},
+                "context": {"<-": "@owner.context"}
             }
         },
         "targetTypeSelect": {
