Fix encrypted volume action refresh on (un)lock
Ticket: #22417
Ticket: #22528

--- a/ui/sections/storage/inspectors/encrypted-volume-actions.reel/encrypted-volume-actions.html
+++ b/ui/sections/storage/inspectors/encrypted-volume-actions.reel/encrypted-volume-actions.html
@@ -166,21 +166,25 @@
                 <div data-montage-id="unlockButton"></div>
             </div>
 
-            <div data-montage-id="rekeySection" class="section rekeySection"></div>
-            <div data-montage-id="rekeyKey"></div>
-            <div data-montage-id="rekeyPassword"></div>
-            <div data-montage-id="rekeyButton"></div>
-
-            <div data-montage-id="keySection" class="backupSection restoreSection"></div>
-            <div class="section backupSection">
-                <div data-montage-id="backupKey" class="g-margin-bottom"></div>
-                <div data-montage-id="backupKeyPassword"></div>
+            <div class="section rekeySection">
+                <div data-montage-id="rekeySection"></div>
+                <div data-montage-id="rekeyKey"></div>
+                <div data-montage-id="rekeyPassword"></div>
+                <div data-montage-id="rekeyButton"></div>
             </div>
 
-            <div class="section restoreSection">
-                <div data-montage-id="uploadKey"></div>
-                <div data-montage-id="restoreKeyPassword"></div>
-                <div data-montage-id="restoreKey"></div>
+            <div class="backupSection restoreSection">
+                <div data-montage-id="keySection"></div>
+                <div class="section backupSection">
+                    <div data-montage-id="backupKey" class="g-margin-bottom"></div>
+                    <div data-montage-id="backupKeyPassword"></div>
+                </div>
+
+                <div class="section restoreSection">
+                    <div data-montage-id="uploadKey"></div>
+                    <div data-montage-id="restoreKeyPassword"></div>
+                    <div data-montage-id="restoreKey"></div>
+                </div>
             </div>
         </div>
     </div>
